--- a/JS Apps/Exercise/Remote Databases/BOOKS/index.html
+++ b/JS Apps/Exercise/Remote Databases/BOOKS/index.html
@@ -48,7 +48,10 @@
         <input type="title" id="author" placeholder="Author...">
         <label>ISBN</label>
         <input type="title" id="isbn" placeholder="Isnb...">
-        <button>Submit</button>
+        <button id="submitBtn">Submit</button>
+
+        <button id="editBtn" class="tntEdit" style="display: none">Done</button>
+        <button id="cancelBtn" class="tntDelete" style="display: none">Cancel</button>
     </form>
     <script src="./app.js"></script>
 </body>
